[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mdnotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mistune", "notion-client"]

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.black]
line-length = 119
