[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mdnotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mistune", "notion-client"]

[project.optional-dependencies]
dev = ["black", "dotenv", "pre-commit", "pytest"]

[tool.black]
line-length = 119

[tool.setuptools]
packages = ["mdnotion"]
